<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/itemMenuHome"></item>

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_offer_24dp"
        android:title="@string/itemMenuOffers"></item>
    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_payment_24dp"
        android:title="@string/itemMenuPayments"></item>


    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_24dp"
        android:title="@string/itemMenuAccount"></item>


    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions_24dp"
        android:title="@string/itemMenuTransactions"></item>



</menu>